client/assets/css/site.css
@font-face {
    font-family: myFont;
    src: url("../fonts/MissionGothicLight.otf");
}
body {
  font-family: myFont;
}

.activeOption {
    background:teal;
}

input,
button,
select,
textarea {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

#nav {
    color: white;
    background-color: #3E5060;  
}

h4 {
    color:#3E5060;
}

#navLogo{
    font-size: 36px;
    background-color:#354458;
    padding:5px;
    color:white;
    
}
#navBody {
    margin:0;
    padding:0;
    background-color: #3E5060;
}

#navButton:hover {
    background-color:teal;    
}
#footer {
   padding-left:10px;
    background-color:#354458;
 }
 md-list md-list-item button.md-button:not([disabled]):hover {
  background-color: none;
}
 
 #tool {
     background-color:#354458;
 }
#content {
    height:100%;
}

#journalPrompt a {
    color:white;
    text-decoration:none;
}
.gridListdemoBasicUsage md-grid-list {
    margin: 8px;
}
.gridListdemoBasicUsage .gray {
    background: #f5f5f5;
}
.gridListdemoBasicUsage md-grid-tile {
    transition: all 400ms ease-out 50ms;
}

/* numbered buttons */
#status-buttons                 {  }
#status-buttons a               { color:grey; display:inline-block; font-size:12px; margin-right:10px; text-align:center; text-transform:uppercase; text-decoration:none;}
#status-buttons a:hover         { text-decoration:none; }
#status-buttons span            { background:gray; display:block; height:10px; margin:0 12px 10px; padding-top:5px; width:15px;
    border-radius:50%; }

/* active buttons */
#status-buttons a.active span   { background:#00BC8C; }

.chipsdemoBasicUsage .errors {
  font-size: 12px;
  color: #dd2c00;
  margin-top: 10px; }

.chipsdemoBasicUsage .custom-chips .md-chip {
  position: relative; }
  .chipsdemoBasicUsage .custom-chips .md-chip .md-chip-remove-container {
    position: absolute;
    right: 4px;
    top: 4px;
    margin-right: 0;
    height: 24px; }

  .chipsdemoBasicUsage .custom-chips .md-chip:not(.md-readonly) md-chip-template {
    padding-right: 5px; }
/*
#entry-views.ng-enter,
#entry-views.ng-leave      { position:absolute; left:30px; right:30px;
    transition:0.5s all ease; -moz-transition:0.5s all ease; -webkit-transition:0.5s all ease; 
} */
    
/* enter animation 
#entry-views.ng-enter            { 
    -webkit-animation:slideInRight 0.5s both ease;
    -moz-animation:slideInRight 0.5s both ease;
    animation:slideInRight 0.5s both ease; 
}*/

/* leave animation 
#entry-views.ng-leave            { 
    -webkit-animation:slideOutLeft 0.5s both ease;
    -moz-animation:slideOutLeft 0.5s both ease;
    animation:slideOutLeft 0.5s both ease;   
}*/

/* ANIMATIONS
============================================================================= */
/* slide out to the left 
@keyframes slideOutLeft {
    to      { transform: translateX(-200%); }
}
@-moz-keyframes slideOutLeft {  
    to      { -moz-transform: translateX(-200%); }
}
@-webkit-keyframes slideOutLeft {
    to      { -webkit-transform: translateX(-200%); }
}*/

/* slide in from the right 
@keyframes slideInRight {
    from    { transform:translateX(200%); }
    to      { transform: translateX(0); }
}
@-moz-keyframes slideInRight {
    from    { -moz-transform:translateX(200%); }
    to      { -moz-transform: translateX(0); }
}
@-webkit-keyframes slideInRight {
    from    { -webkit-transform:translateX(200%); }
    to      { -webkit-transform: translateX(0); }
}*/

